--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- About Me -->
     <section id="about-me" class="container">
       <div>
-        <img src="https://miro.medium.com/max/1400/1*qdAW1TjCN57h1lbuuzvchg.gif" class="profile_image"/>
+        <img src="html_finalprojimages/freepik__fun-whimsical-elements-with-bright-colors-and-a-se__87318.png" class="profile_image"/>
       </div>
 
       <div>
